updated to implement inline file support in compose

--- a/Unifi network Application - DietPi/docker-compose.yml
+++ b/Unifi network Application - DietPi/docker-compose.yml
@@ -71,7 +71,7 @@ services:
       - target: 6789 #optional
         published: "6789"
         protocol: tcp
-      - target: 5514
+      - target: 5514 #optional
         published: "5514"
         protocol: udp
     restart: unless-stopped
